<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="todolist.jimmy.com.cleancalendarcompanionv2.AddTaskActivity"
    tools:showIn="@layout/activity_add_task">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtTaskName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskParticipants" />

        <EditText
            android:id="@+id/txtTaskDescription"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/txtTaskParticipants"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/participants"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskDescription"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <Button
            android:id="@+id/btnSetDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_date"
            app:layout_constraintRight_toLeftOf="@id/txtTaskDate"
            app:layout_constraintEnd_toEndOf="@id/txtTaskDate"
            app:layout_constraintTop_toBottomOf="@+id/txtLocation"
             />
        <EditText
            android:id="@+id/txtTaskDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="datetime"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLocation" />

        <LinearLayout
            android:id="@+id/btnTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskDate"
            >
            <Button
                android:id="@+id/btnStartTime"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/set_start_time"
                app:layout_constraintLeft_toLeftOf="@id/txtTaskDate" />
            <Button
                android:id="@+id/btnEndTime"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/set_end_time"
                app:layout_constraintLeft_toRightOf="@id/btnStartTime"
                app:layout_constraintTop_toBottomOf="@+id/txtTaskDate" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/txtTimeLayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnTimeLayout"
            >
            <EditText
                android:id="@+id/txtStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:ems="6"
                android:hint="@string/start_time"
                android:inputType="time"
                app:layout_constraintTop_toBottomOf="@+id/btnTimeLayout"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/txtEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/end_time"
                android:inputType="time"
                app:layout_constraintLeft_toRightOf="@+id/txtStartTime"
                android:layout_marginRight="8dp"

                app:layout_constraintBaseline_toBaselineOf="@+id/txtStartTime"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkAllDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:checked="false"
            android:text="@string/all_day"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTimeLayout"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btnAddTask"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/done"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkAllDay" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
