<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="todolist.jimmy.com.cleancalendarcompanionv2.MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/btnSummary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/summary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnViewTask"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textSize="24sp" />

    </android.support.v7.widget.GridLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGrid" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_Tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="414dp" />

</android.support.constraint.ConstraintLayout>
