<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="todolist.jimmy.com.cleancalendarcompanionv2.ViewTaskActivity"
    tools:showIn="@layout/activity_view_task">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/constraintLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RadioGroup
            android:layout_width="237dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">
            <RadioButton
                android:id="@+id/rbOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/on"
                android:checked="true"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="119dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <RadioButton
                android:id="@+id/rbBetween"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/between"
                app:layout_constraintBaseline_toBaselineOf="@+id/rbOn"
                app:layout_constraintLeft_toRightOf="@+id/rbOn" />

            <RadioButton
                android:id="@+id/rbAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all" />
        </RadioGroup>

        <Button
            android:id="@+id/btnFilter"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout_endDate"
            android:layout_width="138dp"
            android:layout_height="18dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and_space"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView4"
                android:layout_toRightOf="@+id/textView4"
                android:text="@string/date" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_Tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
